--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "files": [],
+  "compilerOptions": {
+    "types": ["@types/node"]
+  },
   "references": [
     {
       "path": "./.nuxt/tsconfig.app.json"
